Fixed duplicate CSS between activo/style.css and activo/*.sass (the later was getting processed by SASS via the pipeline. Note: we probably can clean up and remove style.css in favor of the SASS files. TODO later :))

--- a/app/assets/stylesheets/rails_admin/rails_admin.css
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css
@@ -8,7 +8,7 @@
  *= require ./theme/formtastic.css
  *= require ./theme/jquery.tipsy.css
  *= require ./theme/uniform.default.css
- *= require_tree ./theme/activo
+ *= require ./theme/activo/style.css
  *= require ./base.css
  *= require ./dashboard.css
  *= require ./list.css
