--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -10,10 +10,11 @@
   else
     collection = field.associated_collection(@authorization_adapter).sort_by {|a| selected_ids.index(a[1]) || selected_ids.size }
   end
-
+  edit_url = authorized?(:edit, config.abstract_model) ? rails_admin_edit_path(:model_name => config.abstract_model.to_param, :id => '__ID__') : ''
+  
 = field_wrapper_for(form, field) do
   %input{:name => field.dom_name, :type => "hidden", :value => ""}
-  = form.select field.method_name, collection, { :selected => selected_ids, :object => @object }, field.html_attributes
+  = form.select field.method_name, collection, { :selected => selected_ids, :object => @object }, field.html_attributes.merge({:'data-edit-url' => edit_url})
 
 
   - if authorized? :new, config.abstract_model
@@ -23,7 +24,6 @@
 - head_javascript "rails_admin/ra.filtering-multiselect.js"
 - head_javascript do
   $j(document).ready(function($){
-  $(".#{"#{field.dom_id}"} .createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
   $("##{field.dom_id}").filteringMultiselect({
   - if xhr
     createQuery: function(query) {
@@ -39,5 +39,11 @@
   up: "#{t("admin.new.up")}",
   down: "#{t("admin.new.down")}"
   }
+  
   });
+  if($("div.createAssociatedRecordDialog").length == 0) {
+  $(".#{"#{field.dom_id}"} .createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
+  } else { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
+  $(".#{"#{field.dom_id}"} .createAssociatedRecord").hide();
+  }
   });
