--- a/app/views/rails_admin/main/_navigation.html.haml
+++ b/app/views/rails_admin/main/_navigation.html.haml
@@ -10,7 +10,7 @@
     - active = tab_titles.include? @page_type
     %li{:class => "#{"active" if active} #{"more" unless children.empty?}"}
       - if children.size == 1
-        = link_to(model.label.pluralize, rails_admin_list_path(:model_name => model.abstract_model.to_param))
+        = link_to(model.label_plural, rails_admin_list_path(:model_name => model.abstract_model.to_param))
       - else
         %a{:href => "#"}= model.navigation_label ? t(model.navigation_label, :default => model.navigation_label) : model.label.pluralize
         %ul{:style => ("#{'display:none;' unless active}")}
