--- a/app/views/layouts/rails_admin/_footer.html.haml
+++ b/app/views/layouts/rails_admin/_footer.html.haml
@@ -1,6 +1,7 @@
 -# FIXME: the asset pipeline combined javascript (without jquery included) loads before the google CDN jquery,
 -# so we end up with a jQuery undefined error. For now, I added jquery to the asset pipeline, but it's not ideal
--# as it might load jQuery twice (if the main application or another engine already loads it)
+-# as it might load jQuery twice (if the main application or another engine already loads it). Also remember to
+-# add that back to the tests in spec/requests/rails_admin_spec.rb as well.
 -#= javascript_fallback "//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/assets/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
 -#= javascript_fallback "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js", "/assets/javascripts/rails_admin/jquery-ui-1.8.14.min.js", "!jQuery.ui"
 
