--- a/app/assets/stylesheets/rails_admin/theme/uniform.default.css
+++ b/app/assets/stylesheets/rails_admin/theme/uniform.default.css
@@ -23,7 +23,7 @@ div.uploader,
 div.uploader span.action,
 div.button,
 div.button span {
-  background-image: url(../images/sprite.png);
+  background-image: url(images/sprite.png);
   background-repeat: no-repeat;
   -webkit-font-smoothing: antialiased;
 }
