--- a/app/assets/stylesheets/rails_admin/rails_admin.css
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css
@@ -4,11 +4,10 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *
  *= require ./theme/base.css
- *= require ./theme/aristo/jquery-ui-1.8.7.custom.css
- *= require ./theme/formtastic.css
  *= require ./theme/jquery.tipsy.css
  *= require ./theme/uniform.default.css
  *= require ./theme/activo/style.css
+ *= require ./aristo/jquery-ui-1.8.7.custom.css
  *= require ./base.css
  *= require ./dashboard.css
  *= require ./list.css
