conditional sass files need to be included some other way

--- a/app/assets/stylesheets/rails_admin/theme/activo/style.sass
+++ b/app/assets/stylesheets/rails_admin/theme/activo/style.sass
@@ -11,10 +11,10 @@
 @import mixins.sass
 
 // Remove this line if you don't use the FORMTASTIC plugin
-@import formtastic_changes.sass
+// @import formtastic_changes.sass
 
 // Remove this line if you don't use the ATTRTASTIC plugin
-@import attrtastic_changes.sass
+// @import attrtastic_changes.sass
 
 
 
