Cleans up multiselect

--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -39,7 +39,7 @@
   sortable: #{field.orderable ? 'true' : 'false'},
   regional: {
   chooseAll: "#{t("admin.new.chose_all")}",
-  chosen: "#{t("admin.new.chosen", :name => config.abstract_model.model.model_name.human(:count => 2, :default => config.label.pluralize))}",
+  chosen: "#{t("admin.new.chosen", :name => config.label_plural)}",
   clearAll:  "#{t("admin.new.clear_all")}",
   selectChoice: "#{t("admin.new.select_choice")}",
   up: "#{t("admin.new.up")}",
