--- a/app/assets/stylesheets/rails_admin/ra.filtering-multiselect.css
+++ b/app/assets/stylesheets/rails_admin/ra.filtering-multiselect.css
@@ -4,22 +4,28 @@
 }
 
 .ra-multiselect-search {
-  background: url(/assets/rails_admin/magnifier.png) no-repeat;
-  padding-left: 19px;
-  padding-top: 5px;
-  font-size: 11px;
-  font-family: Verdana, Geneva, sans-serif;
-  padding-bottom: 5px;
-  background-position: 2px 4px;
-  border-left: 1px solid #e2e3ea;
-  border-top: 1px solid #abadb3;
-  border-bottom: 1px solid #e3e9ef;
-  border-right: 1px solid #dbdfe6;
-  width: 120px;
-  color: #AAA;
-  margin-right: 20px;
+  background: transparent url("/assets/rails_admin/magnifier.png") no-repeat scroll 166px center;
+  border: 1px solid #c1c1c1;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
+  -moz-border-radius: 13px;
+  -webkit-border-radius: 13px;
+  border-radius: 13px;
   float: left;
-}
+  font-family: helvetica, arial, sans-serif;
+  font-size: 13px;
+  height: 25px;
+  margin: 0 25px 15px 0;
+  outline: none;
+  padding: 0 25px 0 10px;
+  width: 155px; }
+
+.ra-multiselect-collection, .ra-multiselect-selection {
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); }
+
 
 .ra-multiselect-header .help {
   float: left;
