--- a/app/assets/stylesheets/rails_admin/form.css
+++ b/app/assets/stylesheets/rails_admin/form.css
@@ -26,17 +26,13 @@ form .field>label, form .field>.field_with_errors>label {
   float:left;
   margin-top:6px;
   font-size:11px;
-  font-weight:bold;
   margin-left:2px;
   width:100px;
 }
 
-form label.inline {
-  display:inline;
-  float:none;
-  font-weight:normal;
+.field label {
+  font-weight:bold;
 }
-
 
 .field {
   padding:15px 0 0 0;
@@ -45,6 +41,16 @@ form label.inline {
 .field .input {
   clear:right;
   float:left;
+  padding-bottom:5px;
+}
+
+.field .input .toggle, .field .input .delete, .field .input .toggle>* {
+  float:left;
+  clear:left;
+}
+
+.field .input .delete {
+  padding-top:5px;
 }
 
 .field .date,
