--- a/app/views/rails_admin/main/_form_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.haml
@@ -10,3 +10,9 @@
       .delete
         = form.check_box(field.delete_method)
         = form.label(field.delete_method, I18n.t('admin.actions.delete').capitalize + " [#{file.instance.send(file.name.to_s + '_file_name') rescue field.method_name}]")
+
+- head_javascript do
+  :plain
+    $j(".field .input .delete input[type='checkbox']").bind('click', function() {
+      $j(this).parents('.input').first().children('.toggle').toggle('slow');
+    });
