Link for item at list view can follow to edit_path

--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -12,7 +12,7 @@
   head_javascript "rails_admin/activo/application.js"
   head_javascript "rails_admin/ra.filter-box.js"
   head_style "rails_admin/list"
-  
+
   @index = 0
   @ordered_filters = (params[:filters] || @model_config.list.filters).inject({}) { |memo, filter|
     field_name = filter.is_a?(Array) ? filter.first : filter
@@ -31,7 +31,7 @@
 
     field_options = case field.type
     when :enum
-      CGI.escapeHTML options_for_select(field.with(:object => @abstract_model.model.new).enum, filter_hash['value']).gsub("\n", '') 
+      CGI.escapeHTML options_for_select(field.with(:object => @abstract_model.model.new).enum, filter_hash['value']).gsub("\n", '')
     else
       ''
     end
@@ -123,7 +123,7 @@
               - delete_path = rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id) if can_delete
               - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
 
-              %tr{:class => row_class, :"data-link" => (can_show ? show_path : nil)}
+              %tr{:class => row_class, :"data-link" => can_show ? show_path : (can_edit ? edit_path : nil)}
                 %td.action.select
                   - if can_bulk_action
                     = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
