Fix for Haml nested layout, thanks @sbeizer! closes #654

--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -1,14 +1,26 @@
 - if @abstract_model && @plugin_name
   - content_for :title do
     #{@abstract_model.pretty_name} | #{@plugin_name}
-= render(:partial => 'layouts/rails_admin/head')
-%body.rails_admin
-  #container
-    = render(:partial => 'layouts/rails_admin/header')
-    #wrapper.wat-cf
-      #main
-        #content= yield
-        #footer
-          %p Rails Admin | 2011
-      = render :partial => "layouts/rails_admin/sidebar"
-  = render(:partial => 'layouts/rails_admin/footer')
+!!! Strict
+%html{:xmlns => "http://www.w3.org/1999/xhtml"}
+  %head
+    %title= yield :title || "#{@page_name} | #{@plugin_name}"
+    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
+    %meta{:content => "NONE,NOARCHIVE", :name => "robots"}
+    
+    = stylesheet_link_tag "rails_admin/rails_admin.css"
+
+    = head_style
+    = csrf_meta_tag
+    %body.rails_admin
+      #container
+        = render(:partial => 'layouts/rails_admin/header')
+        #wrapper.wat-cf
+          #main
+            #content= yield
+            #footer
+              %p Rails Admin | 2011
+          = render :partial => "layouts/rails_admin/sidebar"
+      = javascript_include_tag "rails_admin/rails_admin.js"
+      = head_javascript
+
