--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -6,9 +6,7 @@
     %ul.wat-cf
       %li= link_to header_icon(:config, t('admin.dashboard.name')), dashboard_path
       - if (root_path rescue nil)
-        %li= link_to header_icon(:home, t('home.name').capitalize), root_path
+        %li= link_to header_icon(:home, t('home.name').capitalize), (root_path rescue '/')
       - if (current_user rescue nil)
         %li= link_to header_icon(:account, current_user.email), (edit_path(:user, current_user) rescue '#')
-      - if (current_user rescue nil)
-        %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (destroy_session_path(current_user) rescue '#'), :method => :delete
-
+        %li= link_to header_icon(:logout, t("admin.credentials.log_out")), '/users/sign_out'
