Adding current_rails_admin helper Styling page header

--- a/app/assets/stylesheets/rails_admin/theme/activo/style.css.erb
+++ b/app/assets/stylesheets/rails_admin/theme/activo/style.css.erb
@@ -156,6 +156,7 @@ hr {
 
 #user-navigation {
   top: auto;
+  margin-top: 20px;
   right: 10px; }
 
 #user-navigation ul li a:link, #user-navigation ul li a:visited, #user-navigation ul li a:hover, #user-navigation ul li a:active {
