--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -1,6 +1,6 @@
 :ruby
   query = params[:query]
-  params = request.params.except(:authenticity_token, :action, :controller, :model_name, :utf8, :bulk_export)
+  params = request.params.except(:authenticity_token, :action, :controller, :utf8, :bulk_export)
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
   properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
@@ -53,7 +53,9 @@
 - can_delete      = authorized? :delete,      @abstract_model
 - can_see_history = authorized? :see_history, @abstract_model
 - can_bulk_action = can_export || can_delete
-
+- show_label    = t("admin.list.show_action")
+- delete_label  = t("admin.list.delete_action")
+- edit_label    = t("admin.list.edit_action")
 
 #block-tables.block
   = breadcrumbs_for :list, @abstract_model
@@ -63,7 +65,7 @@
       .control
         %span(style="margin: 3px 6px")
           %select#filter_select.small-uniform
-            %option{:value => ""}= t('admin.list.add_filter')+"..."
+            %option{:value => ""}= t('admin.list.add_filter') + "..."
             - @filterable_fields.each do |field|
               - field_options = case field.type
               - when :enum
@@ -78,7 +80,7 @@
         - if can_delete
           = action_button '#', t("admin.list.delete_selected"), :cross, :onclick => "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;"
 
-        = form_tag(list_post_path(params.merge(:model_name => @abstract_model.to_param).except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
+        = form_tag(list_post_path(params.except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
           %span.search
             %input#search.search_box{:name => "query", :type => "text", :value => query, :placeholder => "#{t("admin.list.search")}"}
             %input.search_submit{:type => "submit", :value => ""}
@@ -101,7 +103,7 @@
                 - selected = sort == property_name.to_s
                 %th{:class => "#{property.css_class} #{selected ? "selected" : nil}"}
                   - if property.sortable
-                    - sort_location = list_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).except("sort_reverse").merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {:sort_reverse => "false"}))
+                    - sort_location = list_path params.merge(:sort => property_name, :sort_reverse => (selected && sort_reverse != 'true') ? 'true' : 'false')
                     - sort_direction = selected ? (sort_reverse == 'true' ? "ascending" : "descending") : nil
                     = link_to(property_pretty_name, sort_location, :class => sort_direction, :remote => true)
                   - else
@@ -118,28 +120,27 @@
               - edit_path   = edit_path(  :model_name => @abstract_model.to_param, :id => object.id) if can_edit
               - show_path   = show_path(  :model_name => @abstract_model.to_param, :id => object.id) if can_show
               - delete_path = delete_path(:model_name => @abstract_model.to_param, :id => object.id) if can_delete
-              - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
+              - row_class = cycle("odd", "even") + ((can_show || can_edit) ? ' link' : '')
 
-              %tr{:class => row_class, :"data-link" => can_show ? show_path : (can_edit ? edit_path : nil)}
+              %tr{:class => row_class, :"data-link" => can_show && show_path || can_edit && edit_path || ''}
                 %td.action.select
                   - if can_bulk_action
                     = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
-                - other_left = list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i - 1))
+                - other_left = list_path(params.merge(:set => (params[:set].to_i - 1)))
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
-                - properties.map{|property| property.bind(:object, object)}.each do |property|
+                - properties.map{ |property| property.bind(:object, object) }.each do |property|
                   %td{:class => "#{property.css_class}"}= property.pretty_value
-                - other_right = list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i + 1))
+                - other_right = list_path(params.merge(:set => (params[:set].to_i + 1)))
                 %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
                 %td.last
-                  = action_icon(show_path,   :show,  t("admin.list.show_action"))   if can_show
-                  = action_icon(edit_path,   :edit,  t("admin.list.edit_action"))   if can_edit
-                  = action_icon(delete_path, :cross, t("admin.list.delete_action")) if can_delete
-
+                  = action_icon(show_path,   :show,  show_label)   if can_show
+                  = action_icon(edit_path,   :edit,  edit_label)   if can_edit
+                  = action_icon(delete_path, :cross, delete_label) if can_delete
         .pagination
           - if @page_count.to_i > 1
             = paginate(@current_page, @page_count, :url => params).html_safe
           - if @record_count.to_i <= 100 && @page_count.to_i > 1
-            = link_to(t("admin.list.show_all"), list_path(params.merge(:model_name => @abstract_model.to_param, :all => true, :class => "showall")), :method => :get, :remote => true)
+            = link_to(t("admin.list.show_all"), list_path(params.merge(:all => true)), :class => "showall", :method => :get, :remote => true)
         .left(style="white-space: nowrap; padding-top:0.7em;")
           = @record_count
           = @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.label.downcase.pluralize : @model_config.label.downcase)
@@ -152,4 +153,4 @@
             - if can_see_history
               = action_button history_model_path, t("admin.history.name"), :'calendar-hover'
       .wat-cf
-
+      
