--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -1,12 +1,9 @@
 #header
   = render :partial => "rails_admin/main/title"
   %h1
-
   #user-navigation
     %ul.wat-cf
       %li= link_to header_icon(:config, t('admin.dashboard.name')), dashboard_path
-      - if (root_path rescue nil)
-        %li= link_to header_icon(:home, t('home.name').capitalize), (root_path rescue '/')
-      - if (current_user rescue nil)
-        %li= link_to header_icon(:account, current_user.email), (edit_path(:user, current_user) rescue '#')
-        %li= link_to header_icon(:logout, t("admin.credentials.log_out")), '/users/sign_out', :method => (Devise.sign_out_via rescue :delete)
+      %li= link_to header_icon(:home, t('home.name').capitalize), (root_path rescue '/')
+      %li= link_to header_icon(:account, _current_user.email), (edit_path(:user, _current_user) rescue '#')
+      %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (destroy_user_session_path rescue '/users/sign_out'), :method => (Devise.sign_out_via rescue :delete)
