--- a/app/views/rails_admin/main/bulk_delete.html.haml
+++ b/app/views/rails_admin/main/bulk_delete.html.haml
@@ -1,8 +1,8 @@
 #block-tables.block
   = breadcrumbs_for :bulk_destroy, @abstract_model
 
-  .content
-    %h2.title Delete confirmation
+  .content I18n.t('admin.delete.delete_confirmation')
+    %h2.title I18n.t('admin.delete.bulk_delete')
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
       %p= I18n.t('admin.delete.bulk_delete')
