Add alternative page view tracking with Google Analytics

--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -8,6 +8,21 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %meta{:content => "NONE,NOARCHIVE", :name => "robots"}
     
+    - unless @google_analytics_id.nil?
+      %script(type="text/javascript")
+        var _gaq = _gaq || [];
+        _gaq.push([
+        '_setAccount',
+        = "'#{@google_analytics_id}'"
+        ]);
+        _gaq.push(['_trackPageview']);
+        
+        (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    
     = stylesheet_link_tag "rails_admin/rails_admin.css"
 
     = head_style
