--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -4,6 +4,10 @@
   #user-navigation
     %ul.wat-cf
       %li= link_to header_icon(:config, t('admin.dashboard.name')), dashboard_path
-      %li= link_to header_icon(:home, t('home.name').capitalize), (main_app.root_path rescue '/')
-      %li= link_to header_icon(:account, _current_user.email), (edit_path(:user, _current_user) rescue '#') if authorized?(:edit, nil, _current_user)
-      %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (main_app.destroy_user_session_path rescue 'users/sign_out'), :method => (Devise.sign_out_via rescue :delete)
+      - if main_app_root_path = (main_app.root_path rescue false)
+        %li= link_to header_icon(:home, t('home.name').capitalize), main_app_root_path
+      - if _current_user
+        - if authorized?(:edit, nil, _current_user)
+          %li= link_to header_icon(:account, _current_user.email), edit_path(:user, _current_user)
+        - if defined?(Devise)
+          %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (main_app.destroy_user_session_path), :method => Devise.sign_out_via
