--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -10,4 +10,4 @@
         - if authorized?(:edit, nil, _current_user)
           %li= link_to header_icon(:account, _current_user.email), edit_path(:user, _current_user)
         - if defined?(Devise)
-          %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (main_app.destroy_user_session_path), :method => Devise.sign_out_via
+          %li= link_to header_icon(:logout, t("admin.credentials.log_out")), main_app.destroy_user_session_path, :method => Devise.sign_out_via
