Several enhancements for regular Paperclip handling.

--- a/app/assets/stylesheets/rails_admin/form.css.erb
+++ b/app/assets/stylesheets/rails_admin/form.css.erb
@@ -111,6 +111,7 @@ form .field>label, form .field>.fieldWithErrors>label {
 }
 
 .errorMessage {
+  clear:left;
   display:block;
   margin-top:5px;
   margin-left:103px;
