--- a/app/assets/stylesheets/rails_admin/form.css.erb
+++ b/app/assets/stylesheets/rails_admin/form.css.erb
@@ -21,7 +21,7 @@ form a.createAssociatedRecord {
     margin-left: 10px;
 }
 
-form .field>label, form .field>.fieldWithErrors>label {
+form .field>label, form .field>.field_with_errors>label {
   display:block;
   float:left;
   margin-top:6px;
