--- a/app/assets/stylesheets/rails_admin/rails_admin.css
+++ b/app/assets/stylesheets/rails_admin/rails_admin.css
@@ -2,19 +2,12 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require_self
- *= require ./theme/base.css
- *= require ./theme/jquery.tipsy.css
- *= require ./theme/activo/style.css
  *= require ./aristo/jquery-ui-1.8.7.custom.css
- *= require ./base.css
- *= require ./dashboard.css
- *= require ./list.css
- *= require ./form.css
- *= require ./show.css
+ *= require ./bootstrap/bootstrap.css
  *= require ./jquery.colorpicker.css
  *= require ./jquery.ui.timepicker.css
  *= require ./ra.filtering-multiselect.css
  *= require ./ra.filtering-select.css
  *= require ./ra.timeline.css
+ *= require_self
 */
