--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -18,9 +18,9 @@
           .container
             %h3= render :partial => 'rails_admin/main/title'
             %ul.nav.secondary-nav
-              %li= link_to header_icon(:config, t('admin.dashboard.name')), dashboard_path
+              %li= link_to t('admin.dashboard.name'), dashboard_path
               - if main_app_root_path = (main_app.root_path rescue false)
-                %li= link_to header_icon(:home, t('home.name').capitalize), main_app_root_path
+                %li= link_to t('home.name').capitalize, main_app_root_path
               - if _current_user
                 - if authorized?(:edit, _current_user.class, _current_user)
                   %li= link_to _current_user.email, edit_path(_current_user.class.name.underscore.pluralize, _current_user)
