--- a/app/views/rails_admin/main/bulk_delete.html.haml
+++ b/app/views/rails_admin/main/bulk_delete.html.haml
@@ -5,7 +5,7 @@
   %br
   %br
   .actions
-    %button.btn.primary{:type => "submit"}
+    %button.btn.danger{:type => "submit"}
       = t("admin.delete.confirmation")
 
     %button.btn{:type => "submit", :name => "_continue"}
